--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -202,6 +202,17 @@
             padding-bottom: 0.5rem;
         }
 
+        .notes {
+            padding-block-start: 1rem;
+            padding-top: 1rem;
+            border-top: solid 1px #fff;
+        }
+
+        .notes ul li {
+            margin-block-end: 1rem;
+            margin-bottom: 1rem;
+        }
+
         .margin-md {
             margin: 2rem 0;
         }
@@ -244,6 +255,14 @@
                 <p>
                     <button v-on:click="start">Start Game</button>
                 </p>
+            </section>
+            <section class="notes">
+                <h2>Notes</h2>
+                <ul>
+                    <li>Keep track of players tech during the game on the Tech page. Tech powers are then included in the calculations.</li>
+                    <li>If you are using Carriers, and they deploy Corvettes, simply increase the Corvette count in the calculator before running the calculation. The app does not automatically deploy Corvettes from Carriers.</li>
+                    <li>The app shows all possible outcomes, except for cases where you obviously should recall Corvettes.</li>
+                </ul>
             </section>
         </section>
         <nav class="menu-links" v-if="this.pageState ===  1 || this.pageState === 2">
