--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -261,7 +261,7 @@
                 <ul>
                     <li>Keep track of players tech during the game on the Tech page. Tech powers are then included in the calculations.</li>
                     <li>If you are using Carriers, and they deploy Corvettes, simply increase the Corvette count in the calculator before running the calculation. The app does not automatically deploy Corvettes from Carriers.</li>
-                    <li>The app shows all possible outcomes, except for cases where you obviously should recall Corvettes.</li>
+                    <li>The app shows all possible outcomes, except for variations where you obviously should recall Corvettes but recall something else instead.</li>
                 </ul>
             </section>
         </section>
