--- a/voidfall/index.html
+++ b/voidfall/index.html
@@ -262,6 +262,7 @@
                     <li>Keep track of players tech during the game on the Tech page. Tech powers are then included in the calculations.</li>
                     <li>If you are using Carriers, and they deploy Corvettes, simply increase the Corvette count in the calculator before running the calculation. The app does not automatically deploy Corvettes from Carriers.</li>
                     <li>The app shows all possible outcomes, except for variations where you obviously should recall Corvettes but recall something else instead.</li>
+                    <li>Once you have calculated once, any changes to fleet power will auto-recalculate unless you change the invader/defender.</li>
                 </ul>
             </section>
         </section>
