--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <p class="small">Dice roller for Nemo's War.</p>
     <p><a href="/nemoswarcalc"><strong>Nemo's War</strong>: Score Calculator</a></p>
     <p class="small">Score calculator for Nemo's War.</p>
+    <p><a href="/voidfall"><strong>Voidfall</strong>: Calculator</a></p>
+    <p class="small">Calculator for fleet encounters in Voidfall.</p>
 
     
     <h2>Solo Modes</h2>
