--- a/hegemony/index.htm
+++ b/hegemony/index.htm
@@ -15,6 +15,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <style>
+        :root {
+            /* policies */
+            --fiscal-policy: #0086b9;
+            --labor-market: #7d73a2;
+            --taxation: #b25099;
+            --health-and-benefits: #c00d0d;
+            --education: #ea8d00;
+            --foreign-trade: #ac8954;
+            --immigration: #70706f;
+
+            /* classes */
+            --working-class: #ed1d24;
+            --middle-class: #ffc20e;
+            --capitalist-class: #0089cf;
+            --state: #939598;
+            --grey: #b2b2b2;
+
+            /* items */
+            --influence: #951b81;
+            --food: #80923e;
+            --media: #008dc6;
+        }
+
         * {
             font-family: 'Montserrat', sans-serif;
             font-weight: 300;
